--- a/src/main/resources/templates/thread-content.html
+++ b/src/main/resources/templates/thread-content.html
@@ -8,54 +8,58 @@
     <header>
         <th:block th:replace="~{fragments.html :: page-header}"></th:block>
     </header>
-    <section>
-        <div id="content">
-            <div th:if="${admin}" class="delete-content">
-                <a th:href="@{/thread/{threadId}/delete-thread(threadId=${thread.id})}"
-                   onclick="return confirm('Czy na pewno chcesz usunąć ten temat?')">Usuń temat</a>
-            </div>
+    <section id="content">
+        <div th:if="${admin}" class="delete-content">
+            <a th:href="@{/thread/{threadId}/delete-thread(threadId=${thread.id})}"
+               onclick="return confirm('Czy na pewno chcesz usunąć ten temat?')">Usuń temat</a>
+        </div>
+        <div th:if="${posts.size() == 0}" class="no-content">
+            W tym temacie nie ma jeszcze żadnych postów.
+        </div>
+        <div th:if="${posts.size() > 0}" class="post-grid">
+            <div class="grid-header">Autor</div>
+            <div class="grid-header">Wiadomość</div>
 
-            <div class="post-grid">
-                <div class="grid-header">Autor</div>
-                <div class="grid-header">Wiadomość</div>
+            <th:block th:each="fullPostDTO : ${posts}">
+                <div class="post-grid-content">
 
-                <th:block th:each="fullPostDTO : ${posts}">
-                    <div class="post-grid-content">
-
-                        <div th:text="${fullPostDTO.user.login}"
-                             th:class="${fullPostDTO.user.function == T(com.kuba.forum.model.User.Function).ADMIN} ? 'post-author-admin' : 'post-author'">
-                        </div>
-
-                        <div th:if="${fullPostDTO.user.function == T(com.kuba.forum.model.User.Function).ADMIN}"
-                             th:text="${fullPostDTO.user.function.toString()}" class="post-author-info"></div>
-
-                        <div class="post-author-info">
-                            <div th:text="'Wiek: ' + ${fullPostDTO.user.getAge()}"></div>
-                            <div th:text="'Płeć: ' + ${fullPostDTO.user.gender.toString()}"></div>
-                            <div th:text="'Dołączenie: ' + ${fullPostDTO.user.getPrettyJoinDate()}"></div>
-                            <div th:text="'Posty: ' + ${fullPostDTO.numberOfUserPosts}"></div>
-                            <div th:text="'Skąd: ' + ${fullPostDTO.user.place}"></div>
-                        </div>
-
+                    <div th:text="${fullPostDTO.user.login}"
+                         th:class="${fullPostDTO.user.function == T(com.kuba.forum.model.User.Function).ADMIN} ? 'post-author-admin' : 'post-author'">
                     </div>
-                    <div class="post-grid-content">
-                        <div>
+
+                    <div th:if="${fullPostDTO.user.function == T(com.kuba.forum.model.User.Function).ADMIN}"
+                         th:text="${fullPostDTO.user.function.toString()}" class="post-author-info"></div>
+
+                    <div class="post-author-info">
+                        <div th:text="'Wiek: ' + ${fullPostDTO.user.getAge()}"></div>
+                        <div th:text="'Płeć: ' + ${fullPostDTO.user.gender.toString()}"></div>
+                        <div th:text="'Dołączenie: ' + ${fullPostDTO.user.getPrettyJoinDate()}"></div>
+                        <div th:text="'Posty: ' + ${fullPostDTO.numberOfUserPosts}"></div>
+                        <div th:text="'Skąd: ' + ${fullPostDTO.user.place}"></div>
+                    </div>
+
+                </div>
+                <div class="post-grid-content">
+                    <div>
                         <span th:text="'Wysłano: ' + ${fullPostDTO.post.getPrettyDate()}"
                               class="post-author-info"></span>
-                            <a th:if="${admin}"
-                               th:href="@{/thread/{threadId}/delete-post/{postId}(threadId=${thread.id},postId=${fullPostDTO.post.id})}"
-                               class="post-author-info"
-                               onclick="return confirm('Czy na pewno chcesz usunąć ten post?')">Usuń
-                                post</a>
-                        </div>
-                        <div th:text="${fullPostDTO.post.contents}" class="post-message"></div>
-                    </div>
-                </th:block>
-            </div>
-            <div>
-                <a th:href="@{/thread/{thread.id}/add-reply(thread.id=${{thread.id}})}" class="button">Odpowiedz</a>
-            </div>
+                        <a th:if="${admin}"
+                           th:href="@{/thread/{threadId}/delete-post/{postId}(threadId=${thread.id},postId=${fullPostDTO.post.id})}"
+                           class="post-author-info delete-style"
+                           onclick="return confirm('Czy na pewno chcesz usunąć ten post?')">Usuń
+                            post</a>
 
+                        <a th:if="${(logged) && (admin || fullPostDTO.user.id == user.id)}"
+                           th:href="@{/thread/{threadId}/edit-post/{postId}(threadId=${thread.id},postId=${fullPostDTO.post.id})}"
+                           class="post-author-info">Edytuj post</a>
+
+                    </div>
+                    <div th:text="${fullPostDTO.post.contents}" class="post-message"></div>
+                </div>
+            </th:block>
+        </div>
+        <div>
+            <a th:href="@{/thread/{thread.id}/add-reply(thread.id=${{thread.id}})}" class="button">Odpowiedz</a>
         </div>
     </section>
     <footer>
