--- a/src/main/resources/templates/new-reply.html
+++ b/src/main/resources/templates/new-reply.html
@@ -10,21 +10,19 @@
     <header>
         <th:block th:replace="~{fragments.html :: page-header}"></th:block>
     </header>
-    <section>
-        <div id="content">
-
-            <div class="content-new">
-                <h3>Napisz odpowiedź</h3>
-                <form method="post" onsubmit="return validate()">
-                    <label for="contents">Treść wiadomości: </label>
-                    <textarea class="textarea" id="contents" rows="15" th:field="*{postModel.contents}"></textarea>
-                    <div id="contents-error"></div>
-                    <div class="form-footer">
-                        <input type="submit" value="Wyślij" class="button">
-                        <input type="reset" value="Reset" class="button">
-                    </div>
-                </form>
-            </div>
+    <section id="content">
+        <div class="content-new">
+            <h3 th:if="${replying}">Napisz odpowiedź</h3>
+            <h3 th:if="${editing}">Edytuj odpowiedź</h3>
+            <form method="post" onsubmit="return validate()">
+                <label for="contents">Treść wiadomości: </label>
+                <textarea class="textarea" id="contents" rows="15" th:field="*{postModel.contents}"></textarea>
+                <div id="contents-error"></div>
+                <div class="form-footer">
+                    <input type="submit" value="Wyślij" class="button">
+                    <input type="reset" value="Reset" class="button">
+                </div>
+            </form>
         </div>
     </section>
     <footer>
