--- a/src/main/resources/templates/new-topic.html
+++ b/src/main/resources/templates/new-topic.html
@@ -10,25 +10,23 @@
     <header>
         <th:block th:replace="~{fragments.html :: page-header}"></th:block>
     </header>
-    <section>
-        <div id="content">
-            <div class="content-new">
-                <h3>Dodaj nowe forum</h3>
-                <form method="post" onsubmit="return validate()">
-                    <label for="name">Temat: </label>
-                    <input type="text" class="input" id="name" th:field="*{topicModel.name}">
-                    <div id="name-error"></div>
+    <section id="content">
+        <div class="content-new">
+            <h3>Dodaj nowe forum</h3>
+            <form method="post" onsubmit="return validate()">
+                <label for="name">Temat: </label>
+                <input type="text" class="input" id="name" th:field="*{topicModel.name}">
+                <div id="name-error"></div>
 
-                    <label for="description">Opis forum: </label>
-                    <textarea class="textarea" id="description" rows="5" th:field="*{topicModel.description}"></textarea>
-                    <div id="description-error"></div>
+                <label for="description">Opis forum: </label>
+                <textarea class="textarea" id="description" rows="5" th:field="*{topicModel.description}"></textarea>
+                <div id="description-error"></div>
 
-                    <div class="form-footer">
-                        <input type="submit" value="Wyślij" class="button">
-                        <input type="reset" value="Reset" class="button">
-                    </div>
-                </form>
-            </div>
+                <div class="form-footer">
+                    <input type="submit" value="Wyślij" class="button">
+                    <input type="reset" value="Reset" class="button">
+                </div>
+            </form>
         </div>
     </section>
     <footer>
