--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -9,60 +9,56 @@
     <header>
         <th:block th:replace="~{fragments.html :: page-header}"></th:block>
     </header>
-    <section>
-        <div id="content">
-            <!--TODO -->
-            <div class="content-form">
-                <h3>Wyszukiwarka</h3>
-                <form method="get">
-                    <label for="query">Wyszukaj w treści posta: </label><br>
-                    <input type="search" name="query" id="query" class="input" autofocus>
-                    <div class="form-footer">
-                        <input type="submit" value="Szukaj" class="button">
-                    </div>
-                </form>
-            </div>
+    <section id="content">
+        <div class="content-form">
+            <h3>Wyszukiwarka</h3>
+            <form method="get">
+                <label for="query">Wyszukaj w treści posta: </label><br>
+                <input type="search" name="query" id="query" class="input" autofocus>
+                <div class="form-footer">
+                    <input type="submit" value="Szukaj" class="button">
+                </div>
+            </form>
+        </div>
 
-            <h4 th:if="${param.query} != null"
-                th:text="${posts.size() > 0} ? 'Wyniki wyszukiwania dla frazy: ' + ${param.query} : 'Brak wyników wyszukiwania dla frazy: ' + ${param.query}"></h4>
+        <h4 th:if="${param.query} != null"
+            th:text="${posts.size() > 0} ? 'Wyniki wyszukiwania dla frazy: ' + ${param.query} : 'Brak wyników wyszukiwania dla frazy: ' + ${param.query}"></h4>
 
-            <th:block th:if="${posts.size() > 0}">
-                <div class="post-grid">
-                    <div class="grid-header">Autor</div>
-                    <div class="grid-header">Wiadomość</div>
+        <th:block th:if="${posts.size() > 0}">
+            <div class="post-grid">
+                <div class="grid-header">Autor</div>
+                <div class="grid-header">Wiadomość</div>
 
-                    <th:block th:each="fullPostDTO : ${posts}">
-                        <div class="post-grid-content">
+                <th:block th:each="fullPostDTO : ${posts}">
+                    <div class="post-grid-content">
 
-                            <div th:text="${fullPostDTO.user.login}"
-                                 th:class="${fullPostDTO.user.function == T(com.kuba.forum.model.User.Function).ADMIN} ? 'post-author-admin' : 'post-author'">
-                            </div>
-
-                            <div th:text="${fullPostDTO.user.function.toString()}" class="post-author-info"></div>
-
-                            <div class="post-author-info">
-                                <div th:text="'Wiek: ' + ${fullPostDTO.user.getAge()}"></div>
-                                <div th:text="'Płeć: ' + ${fullPostDTO.user.gender.toString()}"></div>
-                                <div th:text="'Dołączenie: ' + ${fullPostDTO.user.getPrettyJoinDate()}"></div>
-                                <div th:text="'Posty: ' + ${fullPostDTO.numberOfUserPosts}"></div>
-                                <div th:text="'Skąd: ' + ${fullPostDTO.user.place}"></div>
-                            </div>
-
+                        <div th:text="${fullPostDTO.user.login}"
+                             th:class="${fullPostDTO.user.function == T(com.kuba.forum.model.User.Function).ADMIN} ? 'post-author-admin' : 'post-author'">
                         </div>
-                        <div class="post-grid-content">
-                            <div>
+
+                        <div th:text="${fullPostDTO.user.function.toString()}" class="post-author-info"></div>
+
+                        <div class="post-author-info">
+                            <div th:text="'Wiek: ' + ${fullPostDTO.user.getAge()}"></div>
+                            <div th:text="'Płeć: ' + ${fullPostDTO.user.gender.toString()}"></div>
+                            <div th:text="'Dołączenie: ' + ${fullPostDTO.user.getPrettyJoinDate()}"></div>
+                            <div th:text="'Posty: ' + ${fullPostDTO.numberOfUserPosts}"></div>
+                            <div th:text="'Skąd: ' + ${fullPostDTO.user.place}"></div>
+                        </div>
+                    </div>
+                    <div class="post-grid-content">
+                        <div>
                         <span th:text="'Wysłano:' + ${fullPostDTO.post.getPrettyDate()}"
                               class="post-author-info"></span>
-                                <span class="post-author-info">Temat:</span>
-                                <a th:href="@{/thread/{threadId}(threadId=${fullPostDTO.thread.id})}"
-                                   th:text="${fullPostDTO.thread.subject}" class="post-author-info"></a>
-                            </div>
-                            <div th:text="${fullPostDTO.post.contents}" class="post-message"></div>
+                            <span class="post-author-info">Temat:</span>
+                            <a th:href="@{/thread/{threadId}(threadId=${fullPostDTO.thread.id})}"
+                               th:text="${fullPostDTO.thread.subject}" class="post-author-info"></a>
                         </div>
-                    </th:block>
-                </div>
-            </th:block>
-        </div>
+                        <div th:text="${fullPostDTO.post.contents}" class="post-message"></div>
+                    </div>
+                </th:block>
+            </div>
+        </th:block>
     </section>
     <footer>
         <th:block th:replace="~{fragments.html :: page-footer}"></th:block>
